interpreter-janeklang/tests/bad/02_divisionByZero_6.janek
int main(){
    420 / 0;
    return 0;
}